<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="showProgressDialog">Connecting ..</string>
    <string name="selected">Selected items:</string>
    <string name="nothing">Nothing to add</string>
    <string name="items">Items in basket :</string>
    <string name="question">Add to basket?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="wgot">We got your order</string>
    <string name="server">Something wrong on server</string>
    <string name="noitems">No items in basket</string>
    <string name="login">Please Login/Register</string>
    <string name="loginButton">Login/Register</string>
    <string name="profile">Profile</string>
    <string name="app_name">IT Restaurant</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">IT Restaurant</string>
    <string name="rmenu">Menu</string>
    <string name="user_history">User History</string>
    <string name="about_us">About us</string>
    <string name="user_history1">User history</string>
    <string name="button1">Button</string>
    <string name="windowBackground">#FFEBCD</string>
    <string name="textColor">#800000</string>
    <string name="Color_light01">#F0F8FF</string>
    <string name="editTextBackground"></string>
    <color name="ColorBackG">#87CEFF</color>
    <color name="Color1">#00008B</color>
    <string name="tvUserName">Login :</string>
    <string name="etEnterUserName">Enter your login here</string>
    <string name="tvPassword">Password :</string>
    <string name="etEnterPassword">Enter your password here</string>
    <string name="imAndroidInTheCup">Android in the coffee cup</string>
    <string name="btMainMenu">Back</string>
    <string name="btLogin">Login</string>
    <string name="tvRegisterHere">New to IT Restaurant? Register here</string>
    <string name="tvEmail">Email</string>
    <string name="etEnterEmail">Enter your Email</string>
    <string name="btRegisterNewAccount">Register new Account</string>
    <string name="tvLoginHere">Have you got an account? Login here</string>
    <string name="tvAboutUs">About Us</string>
    <string name="tvProfile">Profile</string>
    <string name="TestString">test test test</string>
    <string name="box">Basket</string>
    <string name="order">Order</string>
    <string name="mesAdminOk">You have been authorized as an Administrator</string>
    <string name="mesUserOk">You have been authorized as a User</string>
    <string name="mesGuestOk">You have been authorized as an Anonimous guest</string>
    <string name="mesUnknownError">Connection failed. Try to login later</string>
    <string name="color_for_category">#181818</string>
    <string name="welcome">Welcome!</string>
    <string name="lpage">Go to the login page?</string>     
</resources>