<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#fff">
  		
  		<!--  Header  Starts-->

  		<LinearLayout
  		    android:id="@+id/header"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:background="@layout/header_gradient"
  		    android:paddingBottom="5dip"
  		    android:paddingTop="5dip" >

  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:layout_marginLeft="10dip"
  							android:contentDescription="@string/imAndroidInTheCup"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends --> 
  		<!-- Footer Start -->
  		<LinearLayout android:id="@+id/footer"
  				android:layout_width="fill_parent"
  				android:layout_height="90dip"
  				android:background="@layout/footer_repeat"
  				android:layout_alignParentBottom="true">
  		</LinearLayout>
  		<!-- Footer Ends --> 
  		
  		<!-- Registration Form -->

		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/header"
		    android:orientation="vertical"
		    android:padding="10dip" >

		    <!-- Full Name Label -->

		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tvUserName"
		        android:textColor="#372c24" />

		    <EditText
		        android:id="@+id/reg_fullname"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip"
		        android:layout_marginTop="5dip"
		        android:hint="@string/etEnterUserName"
		        android:singleLine="true" />

		    <!-- Email Label -->

		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tvEmail"
		        android:textColor="#372c24" />

		    <EditText
		        android:id="@+id/reg_email"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dip"
		        android:layout_marginTop="5dip"
		        android:hint="@string/etEnterEmail"
		        android:singleLine="true" />

		    <!-- Password Label -->

		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tvPassword"
		        android:textColor="#372c24" />

		    <EditText
		        android:id="@+id/reg_password"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:hint="@string/etEnterPassword"
		        android:inputType="textPassword"
		        android:layout_marginBottom="20dip"
		        android:singleLine="true" />

		    <!-- Phone Label -->

		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tvPhone"
		        android:textColor="#372c24" />

		    <EditText
		        android:id="@+id/reg_phone"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:hint="@string/etEnterPhone"
		        android:singleLine="true" >

		        <requestFocus />
		    </EditText>

		    <Button
		        android:id="@+id/btnRegister"
		        style="@style/ThemeButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="4dp"
		        android:layout_marginTop="10dip"
		        android:text="@string/btRegisterNewAccount" />

		    <Button
		        android:id="@+id/button_back"
		        style="@style/ThemeButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="4dp"
		        android:text="@string/btMainMenu"
		        android:textSize="16dip" />

		    <TextView
		        android:id="@+id/link_to_login"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="40dip"
		        android:layout_marginTop="5dip"
		        android:gravity="center"
		        android:text="@string/tvLoginHere"
		        android:textColor="#025f7c"
		        android:textSize="16dip" />

		    <!-- Register Button -->


		    <!-- Link to Login Screen -->

		</LinearLayout>

  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
